Updated link to distribution in example
Signed-off-by: Justin Noel <github@calendee.com>

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 
     <title>Validation on Timeout Demo</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
-    <script src="../src/valOnTimeout.js"></script>
+    <script src="../dist/valOnTimeout.min.js"></script>
     <script src="app.js"></script>
     <link rel="stylesheet" href="http://cdn.foundation5.zurb.com/foundation.css">
 
